<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="6">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2.3"
        android:background="@color/pink_light">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="5">

            <LinearLayout
                android:layout_width="match_parent"

                android:layout_height="match_parent"
                android:layout_weight="4"
                android:gravity="center">


                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/imageView"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:text="@string/sign_up_neibo"
                    android:textColor="#ffffff"
                    style="@style/font_roboto_regular_txt"
                    android:textSize="16sp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="bottom">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/phone_back" />


            </LinearLayout>


        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3.7"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@color/pink_dark">

        <Button
            android:layout_width="match_parent"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:textColor="@color/pink_dark"
            style="@style/font_roboto_regular_txt"
            android:textSize="20sp"
            android:textAllCaps="false"
            android:text="@string/continue_facebook"
            android:background="@drawable/button_white"
            android:layout_height="40dp" />

        <Button
            android:id="@+id/btn_sign_email"
            android:layout_width="match_parent"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:textColor="#ffffff"
            style="@style/font_roboto_regular_txt"
            android:textSize="20sp"
            android:textAllCaps="false"
            android:background="@drawable/button_pink"
            android:layout_marginTop="15dp"
            android:text="@string/sign_email"
            android:layout_height="40dp" />


        <TextView
           android:id="@+id/already_acnt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/already_acnt"
            android:textColor="#ffffff"
            style="@style/font_roboto_regular_txt"
            android:textSize="16sp" />




    </LinearLayout>

</LinearLayout>
