<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linearRegister"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/pink_dark"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:layout_gravity="center"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="20dp">

            <RelativeLayout
                android:id="@+id/register_bck"
                android:layout_width="80dp"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/back_button" />

            </RelativeLayout>


            <TextView
                style="@style/font_roboto_regular_txt"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:gravity="center"

                android:text="@string/sign_up"
                android:textColor="#ffffff"
                android:textSize="22dp" />
        </RelativeLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="10dp"
            android:background="@drawable/bellow_login"
            android:gravity="center" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imgProfilePicture"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:src="@drawable/camera" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp">

            <EditText
                android:id="@+id/edtName"
                style="@style/font_roboto_regular_txt"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:maxLength="40"
                android:layout_marginTop="17dp"
                android:layout_toRightOf="@+id/imgProfile"
                android:background="@android:color/transparent"
                android:ems="10"
                android:cursorVisible="false"
                android:text=""
                android:hint="@string/name"
                android:inputType="textEmailAddress"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:singleLine="true"
                android:textColor="#ffffff"
                android:textColorHint="#ffffff" />

            <ImageView
                android:id="@+id/imgbelowEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edtName"
                android:layout_gravity="center"
                android:layout_marginTop="2dp"
                android:src="@drawable/bellow_login" />

            <ImageView
                android:id="@+id/imgProfile"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignTop="@+id/edtName"
                android:src="@drawable/profile" />

        </RelativeLayout>

//////////////

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp">

            <EditText
                android:id="@+id/edtUserName"
                style="@style/font_roboto_regular_txt"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:cursorVisible="false"
                android:maxLength="30"
                android:layout_marginTop="17dp"
                android:layout_toRightOf="@+id/imgProfile1"
                android:background="@android:color/transparent"
                android:ems="10"
                android:text=""
                android:hint="@string/user_name"
                android:inputType="textEmailAddress"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:singleLine="true"
                android:textColor="#ffffff"
                android:textColorHint="#ffffff" />

            <ImageView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edtUserName"
                android:layout_gravity="center"
                android:layout_marginTop="2dp"
                android:src="@drawable/bellow_login" />

            <ImageView
                android:id="@+id/imgProfile1"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignTop="@+id/edtUserName"
                android:src="@drawable/profile" />

        </RelativeLayout>

        ////////////






        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp">

            <EditText
                android:id="@+id/edtEmailId"
                style="@style/font_roboto_regular_txt"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:cursorVisible="false"
                android:layout_marginTop="17dp"
                android:layout_toRightOf="@+id/imgEmail"
                android:background="@android:color/transparent"
                android:ems="10"
                android:text=""
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:singleLine="true"
                android:textColor="#ffffff"
                android:textColorHint="#ffffff" />

            <ImageView
                android:id="@+id/imgbeloMmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edtEmailId"
                android:layout_gravity="center"
                android:layout_marginTop="2dp"
                android:src="@drawable/bellow_login" />

            <ImageView
                android:id="@+id/imgEmail"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignTop="@+id/edtEmailId"
                android:src="@drawable/email_icon" />

        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp">

            <EditText
                android:id="@+id/edtEmailPasswordR"
                style="@style/font_roboto_regular_txt"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_alignParentRight="true"
                android:maxLength="25"
                android:cursorVisible="false"
                android:layout_gravity="center"
                android:layout_marginTop="17dp"
                android:layout_toRightOf="@+id/imgLock"
                android:background="@android:color/transparent"
                android:ems="10"
                android:text=""
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:singleLine="true"
                android:textColor="#ffffff"
                android:textColorHint="#ffffff" />

            <ImageView
                android:id="@+id/imgbe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edtEmailPasswordR"
                android:layout_gravity="center"
                android:layout_marginTop="2dp"
                android:src="@drawable/bellow_login" />

            <ImageView
                android:id="@+id/imgLock"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignTop="@+id/edtEmailPasswordR"
                android:src="@drawable/lock12" />

        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp">

            <EditText
                android:id="@+id/edtEmailConformpass"
                style="@style/font_roboto_regular_txt"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:layout_marginTop="17dp"
                android:maxLength="25"
                android:cursorVisible="false"
                android:layout_toRightOf="@+id/imgProfil"
                android:background="@android:color/transparent"
                android:ems="10"
                android:text=""
                android:hint="@string/confirm_pass"
                android:inputType="textPassword"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:singleLine="true"
                android:textColor="#ffffff"
                android:textColorHint="#ffffff" />

            <ImageView
                android:id="@+id/imgbelowEmailConfirmpass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edtEmailConformpass"
                android:layout_gravity="center"
                android:layout_marginTop="2dp"
                android:src="@drawable/bellow_login" />

            <ImageView
                android:id="@+id/imgProfil"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignTop="@+id/edtEmailConformpass"
                android:src="@drawable/lock12" />

        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp">

            <EditText
                android:id="@+id/edtMobile"
                style="@style/font_roboto_regular_txt"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:cursorVisible="false"
                android:layout_marginTop="17dp"
                android:layout_toRightOf="@+id/imgMobile"
                android:background="@android:color/transparent"
                android:ems="10"
                android:text=""
                android:hint="@string/contact_nbr"
                android:inputType="phone"
                android:paddingLeft="15dp"
                android:paddingRight="10dp"
                android:singleLine="true"
                android:textColor="#ffffff"
                android:textColorHint="#ffffff" />

            <ImageView
                android:id="@+id/imageMobile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edtMobile"
                android:layout_gravity="center"
                android:layout_marginTop="2dp"
                android:src="@drawable/bellow_login" />

            <ImageView
                android:id="@+id/imgMobile"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignTop="@+id/edtMobile"
                android:src="@drawable/phone_icon" />

        </RelativeLayout>


        <TextView
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:gravity="right"
            android:text="Incorrect password!"
            android:textColor="#ff0000"
            android:visibility="gone" />

        <Button

            android:id="@+id/createAcnt"
            style="@style/font_roboto_regular_txt"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/button_pink"
            android:text="@string/create_acnt"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textSize="18dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="Terms and conditions"
            android:textColor="#ffffff"
            android:visibility="invisible" />

    </LinearLayout>
</ScrollView>
