<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@color/pink_dark"
    android:fillViewport="true"
    android:orientation="vertical">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:layout_gravity="center"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="20dp">

        <RelativeLayout
            android:id="@+id/register_bck"
            android:layout_width="80dp"
            android:layout_height="match_parent">
            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/back_button"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

        </RelativeLayout>

        <TextView
            style="@style/font_roboto_regular_txt"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:gravity="center"

            android:text="@string/Forgot_password"
            android:textColor="#ffffff"
            android:textSize="22dp" />
    </RelativeLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="5dp"
        android:background="@drawable/bellow_login"
        android:gravity="center" />


    <LinearLayout
        android:id="@+id/linearMain_activity"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/icons_news"
            android:layout_width="150dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:src="@drawable/neibo_logo" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="40dp">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageView"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="Please enter your Email to reterive your password."
                android:textColor="#ffffff"
                style="@style/font_roboto_regular_txt"
                android:textSize="16sp" />



        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"

            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp">

            <EditText
                android:id="@+id/edtEmailId"
                style="@style/font_roboto_regular_txt"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:layout_marginTop="17dp"
                android:layout_toRightOf="@+id/imgEmail"
                android:background="@android:color/transparent"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:singleLine="true"
                android:textColor="#ffffff"
                android:textColorHint="#ffffff" />

            <ImageView
                android:id="@+id/imgbeloMmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edtEmailId"
                android:layout_gravity="center"
                android:layout_marginTop="2dp"
                android:src="@drawable/bellow_login" />

            <ImageView
                android:id="@+id/imgEmail"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignTop="@+id/edtEmailId"
                android:src="@drawable/email_icon" />

        </RelativeLayout>


        <TextView
            android:id="@+id/incorrectPass"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:gravity="right"
            android:text="Incorrect password!"
            android:textColor="#ff0000"
            android:visibility="gone" />



        <Button
            android:id="@+id/btncontinue"
            style="@style/font_roboto_regular_txt"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/button_pink"
            android:text="@string/txtcontinue"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textSize="18dp" />


    </LinearLayout>
</LinearLayout>
